--- a/loginForm/MainWindow.xaml
+++ b/loginForm/MainWindow.xaml
@@ -22,165 +22,196 @@
         </Storyboard>
     </Window.Resources>
 
-    <Border CornerRadius="20" BorderThickness="8">
-        <Border.Triggers>
-            <EventTrigger RoutedEvent="Loaded">
-                <BeginStoryboard Storyboard="{StaticResource GradientRotateStoryboard}"/>
-            </EventTrigger>
-        </Border.Triggers>
+    <Grid>
+        <Border x:Name="FocusSink"
+                Width="0" Height="0"
+                Focusable="True"
+                Background="Transparent"
+                Opacity="0"/>
 
-        <Border.BorderBrush>
-            <LinearGradientBrush x:Name="AnimatedBorderBrush" StartPoint="0,0" EndPoint="1,1">
-                <GradientStop Color="#FF055BAC" Offset="0.00" />
-                <GradientStop Color="#FF71FBF8" Offset="0.30" />
-                <GradientStop Color="#FF000000" Offset="0.55" />
-                <GradientStop Color="#FF71FBF8" Offset="0.80" />
-                <GradientStop Color="#FF055BAC" Offset="1.00" />
-                <LinearGradientBrush.Transform>
-                    <TransformGroup>
-                        <RotateTransform CenterX="0.5" CenterY="0.5" />
-                    </TransformGroup>
-                </LinearGradientBrush.Transform>
-            </LinearGradientBrush>
-        </Border.BorderBrush>
+        <Border CornerRadius="20" BorderThickness="8">
+            <Border.Triggers>
+                <EventTrigger RoutedEvent="Loaded">
+                    <BeginStoryboard Storyboard="{StaticResource GradientRotateStoryboard}"/>
+                </EventTrigger>
+            </Border.Triggers>
 
-        <Border Background="White" CornerRadius="15.7">
+            <Border.BorderBrush>
+                <LinearGradientBrush x:Name="AnimatedBorderBrush" StartPoint="0,0" EndPoint="1,1">
+                    <GradientStop Color="#FF055BAC" Offset="0.00" />
+                    <GradientStop Color="#FF71FBF8" Offset="0.30" />
+                    <GradientStop Color="#FF000000" Offset="0.55" />
+                    <GradientStop Color="#FF71FBF8" Offset="0.80" />
+                    <GradientStop Color="#FF055BAC" Offset="1.00" />
+                    <LinearGradientBrush.Transform>
+                        <TransformGroup>
+                            <RotateTransform CenterX="0.5" CenterY="0.5" />
+                        </TransformGroup>
+                    </LinearGradientBrush.Transform>
+                </LinearGradientBrush>
+            </Border.BorderBrush>
 
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="320"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
+            <Border Background="White" CornerRadius="15.7">
 
-                <Grid Grid.Column="0">
-                    <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="25,25,0,0">
-                        <Image Source="assets/Martify.png" Width="60" Height="60" />
-                        <Label Content="Martify"
-                               FontFamily="Comic Sans MS"
-                               FontSize="30"
-                               FontWeight="Bold"
-                               VerticalContentAlignment="Center"
-                               Foreground="#FF055BAC" 
-                               Margin="5,0,0,0"/>
-                    </StackPanel>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="320"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
 
-                    <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,30,0,0">
-
-                        <Image Source="assets/blur_image.png"
-                               Stretch="Fill"
-                               Width="248" Height="273" />
-
-                        <Border CornerRadius="20" BorderThickness="2" BorderBrush="Black">
-                            <Border Background="Gray" Opacity="0.14" CornerRadius="17" />
-                        </Border>
-
-                        <Grid Margin="20,15,20,15">
-                            <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                                <RowDefinition Height="Auto"/>
-                            </Grid.RowDefinitions>
-
-                            <Label Grid.Row="0" Content="Sign in"
+                    <Grid Grid.Column="0">
+                        <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="25,25,0,0">
+                            <Image Source="assets/Martify.png" Width="60" Height="60" />
+                            <Label Content="Martify"
                                    FontFamily="Comic Sans MS"
                                    FontSize="30"
                                    FontWeight="Bold"
-                                   Foreground="#FF055BAC" RenderTransformOrigin="0.5,0.5" >
-                                <Label.RenderTransform>
-                                    <TransformGroup>
-                                        <ScaleTransform/>
-                                        <SkewTransform AngleX="23.775"/>
-                                        <RotateTransform/>
-                                        <TranslateTransform X="10.15"/>
-                                    </TransformGroup>
-                                </Label.RenderTransform>
-                            </Label>
+                                   VerticalContentAlignment="Center"
+                                   Foreground="#FF055BAC" 
+                                   Margin="5,0,0,0"/>
+                        </StackPanel>
 
-                            <Label Grid.Row="1" Content="Username or email address"
-                                   FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
-                                   FontSize="16"
-                                   Foreground="Gray" Margin="0,5,0,0" />
+                        <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,30,0,0" Width="248">
 
-                            <Grid Grid.Row="2" Margin="0,2,0,0">
-                                <Border x:Name="usernameBorder" BorderThickness="1" BorderBrush="Gray" CornerRadius="8" Background="AliceBlue">
-                                    <Grid>
-                                        <TextBox x:Name="usernameTextBox"
-                                                 VerticalContentAlignment="Center"
-                                                 Padding="30,0,5,0"  
-                                                 Height="30"
-                                                 FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
-                                                 FontSize="12.5"
-                                                 BorderThickness="0"
-                                                 Background="Transparent"
-                                                 Foreground="Black"
-                                                 GotFocus="usernameTextBoxGotFocus"
-                                                 LostFocus="usernameTextBoxLostFocus"/>
-                                        <Image Source="assets/user_icon.png"
-                                               HorizontalAlignment="Left"
-                                               Width="20" Height="20"
-                                               Margin="5,0,0,0"
-                                               IsHitTestVisible="False"/>
-                                    </Grid>
-                                </Border>
-                                <Border x:Name="usernameFocusBorder"
-                                        BorderThickness="3"
-                                        CornerRadius="5"
-                                        Opacity="0"
-                                        IsHitTestVisible="False"
-                                        BorderBrush="#4b91cf"/>
-                            </Grid>
-                            <Label Grid.Row="3" Content="Password"
-                                   FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
-                                   FontSize="16"
-                                   Foreground="Gray" Margin="0,10,0,0" />
+                            <Image Source="assets/blur_image.png"
+                                   Stretch="Fill"
+                                   Width="248" Height="273" />
 
-                            <Grid Grid.Row="4" Margin="0,2,0,0">
-                                <Border x:Name="passwordBorder" BorderThickness="1" BorderBrush="Gray" CornerRadius="8" Background="AliceBlue">
-                                    <Grid>
-                                        <PasswordBox x:Name="passwordBox"
+                            <Border CornerRadius="20" BorderThickness="2" Focusable="False" BorderBrush="Black">
+                                <Border Background="Gray" Opacity="0.14" Focusable="False" CornerRadius="17" />
+                            </Border>
+
+                            <Grid Margin="20,15,20,15">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+
+                                <Label Grid.Row="0" Content="Sign in"
+                                       FontFamily="Comic Sans MS"
+                                       FontSize="30"
+                                       FontWeight="Bold"
+                                       Foreground="#FF055BAC" RenderTransformOrigin="0.5,0.5" >
+                                    <Label.RenderTransform>
+                                        <TransformGroup>
+                                            <ScaleTransform/>
+                                            <SkewTransform AngleX="23.775"/>
+                                            <RotateTransform/>
+                                            <TranslateTransform X="10.15"/>
+                                        </TransformGroup>
+                                    </Label.RenderTransform>
+                                </Label>
+
+                                <Label Grid.Row="1" Content="Username or email address"
+                                       FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
+                                       FontSize="16"
+                                       Foreground="Gray" Margin="0,5,0,0" />
+
+                                <Grid Grid.Row="2" Margin="0,2,0,0">
+                                    <Border x:Name="usernameBorder" Focusable="False" BorderThickness="1" BorderBrush="Gray" CornerRadius="8" Background="AliceBlue">
+                                        <Grid>
+                                            <TextBox x:Name="usernameTextBox"
                                                      VerticalContentAlignment="Center"
-                                                     Padding="30,0,5,0"
+                                                     Padding="30,0,5,0"  
                                                      Height="30"
-                                                     FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
-                                                     FontSize="12.5"
+                                                     FontFamily="Arial"
+                                                     FontSize="12"
                                                      BorderThickness="0"
                                                      Background="Transparent"
                                                      Foreground="Black"
+                                                     GotFocus="usernameTextBoxGotFocus"
+                                                     LostFocus="usernameTextBoxLostFocus"/>
+                                            <Image Source="assets/user_icon.png"
+                                                   HorizontalAlignment="Left"
+                                                   Width="20" Height="20"
+                                                   Margin="5,0,0,0"
+                                                   IsHitTestVisible="False"/>
+                                        </Grid>
+                                    </Border>
+                                    <Border x:Name="usernameFocusBorder"
+                                            BorderThickness="3"
+                                            CornerRadius="5"
+                                            Visibility="Collapsed"
+                                            IsHitTestVisible="False"
+                                            Focusable="false"
+                                            BorderBrush="#4b91cf"/>
+                                </Grid>
+
+                                <Label Grid.Row="3" Content="Password"
+                                       FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
+                                       FontSize="16"
+                                       Foreground="Gray" Margin="0,10,0,0" />
+
+                                <Grid Grid.Row="4" Margin="0,2,0,0">
+                                    <Border x:Name="passwordBorder" Focusable="False" BorderThickness="1" BorderBrush="Gray" CornerRadius="8" Background="AliceBlue">
+                                        <Grid>
+                                            <TextBox x:Name="showPasswordTextBox"
+                                                     VerticalContentAlignment="Center"
+                                                     Padding="30,0,35,0"
+                                                     Height="30"
+                                                     FontFamily="Arial"
+                                                     FontSize="12"
+                                                     BorderThickness="0"
+                                                     Background="Transparent"
+                                                     Foreground="Black"
+                                                     Visibility="Collapsed"
                                                      GotFocus="passwordBoxGotFocus"
                                                      LostFocus="passwordBoxLostFocus"/>
-                                        <Image Source="assets/key_icon.png"
-                                               HorizontalAlignment="Left"
-                                               Width="20" Height="20"
-                                               Margin="5,0,0,0"
-                                               IsHitTestVisible="False"/>
-                                    </Grid>
-                                </Border>
-                                <Border x:Name="passwordFocusBorder"
-                                        BorderThickness="3"
-                                        CornerRadius="5"
-                                        Opacity="0"
-                                        IsHitTestVisible="False"
-                                        BorderBrush="#4b91cf"/>
+                                            <PasswordBox x:Name="passwordBox"
+                                                         VerticalContentAlignment="Center"
+                                                         Padding="30,0,35,0"
+                                                         Height="30"
+                                                         FontFamily="Arial"
+                                                         FontSize="8"
+                                                         BorderThickness="0"
+                                                         Background="Transparent"
+                                                         Foreground="Black"
+                                                         GotFocus="passwordBoxGotFocus"
+                                                         LostFocus="passwordBoxLostFocus"/>
+                                            <Image Source="assets/key_icon.png"
+                                                   HorizontalAlignment="Left"
+                                                   Width="20" Height="20"
+                                                   Margin="5,0,0,0"
+                                                   IsHitTestVisible="False"/>
+                                            <Image x:Name="eyeIcon" 
+                                                   Source="assets/eye_closed.png"
+                                                   HorizontalAlignment="Right"
+                                                   Width="20" Height="20"
+                                                   Margin="0,0,8,0"
+                                                   Cursor="Hand"
+                                                   Focusable="False"
+                                                   MouseLeftButtonDown="EyeIcon_MouseLeftButtonDown"/>
+                                        </Grid>
+                                    </Border>
+                                    <Border x:Name="passwordFocusBorder"
+                                            BorderThickness="3"
+                                            CornerRadius="5"
+                                            Visibility="Collapsed"
+                                            IsHitTestVisible="False"
+                                            Focusable="False"
+                                            BorderBrush="#4b91cf"/>
+                                </Grid>
                             </Grid>
                         </Grid>
                     </Grid>
-                </Grid>
 
-                <Grid Grid.Column="1">
-                    <Image Source="assets/login-banner.png" Margin="20" />
-                </Grid>
+                    <Grid Grid.Column="1">
+                        <Image Source="assets/login-banner.png" Margin="20" />
+                    </Grid>
 
-                <Image Source="assets/x_icon.png"
-                       Grid.Column="1"
-                       Margin="0,15,15,0"
-                       Width="30" Height="30"
-                       HorizontalAlignment="Right"
-                       VerticalAlignment="Top"
-                       MouseLeftButtonDown="CloseProgram_Click"
-                       ToolTip="Close Program"/>
-            </Grid>
+                    <Image Source="assets/x_icon.png"
+                           Grid.Column="1"
+                           Margin="0,15,15,0"
+                           Width="30" Height="30"
+                           HorizontalAlignment="Right"
+                           VerticalAlignment="Top"
+                           MouseLeftButtonDown="CloseProgram_Click"
+                           ToolTip="Close Program"/>
+                </Grid>
+            </Border>
         </Border>
-    </Border>
+    </Grid>
 </Window>
