--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -1,11 +1,10 @@
-﻿<Window x:Class="loginForm.MainWindow"
+﻿<Window x:Class="Martify.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:loginForm"
+        xmlns:local="clr-namespace:Martify"
         mc:Ignorable="d"
-        Title="MainWindow"
         Height="450"
         Width="800"
         ResizeMode="NoResize"
@@ -61,9 +60,9 @@
 
                     <Grid Grid.Column="0">
                         <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="25,25,0,0">
-                            <Image Source="assets/Martify.png" Width="60" Height="60" />
+                            <Image Source="resources/images/Martify.png" Width="60" Height="60" />
                             <Label Content="Martify"
-                                   FontFamily="/fonts/#Passero One"
+                                   FontFamily="{StaticResource PasseroOne}"
                                    FontSize="42"
                                    FontWeight="Bold"
                                    VerticalContentAlignment="Center"
@@ -73,7 +72,7 @@
 
                         <Grid VerticalAlignment="Center" HorizontalAlignment="Center" Margin="0,60,0,0" Width="248">
 
-                            <Image Source="assets/blur_image.png"
+                            <Image Source="resources/images/blur_image.png"
                                    Stretch="Fill"
                                    Width="248" Height="273" />
 
@@ -92,7 +91,7 @@
 
                                 <Label Grid.Row="0" Content="Sign in"
                                        Margin="-8,0,0,0"
-                                       FontFamily="/fonts/#Rubik Glitch Pop"
+                                       FontFamily="{StaticResource RubikGlitchPop}"
                                        FontSize="35"
                                        FontWeight="Bold"
                                        VerticalContentAlignment="Center"
@@ -108,7 +107,7 @@
                                 </Label>
 
                                 <Label Grid.Row="1" Content="Username or email address"
-                                       FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
+                                       FontFamily="{StaticResource YanoneKaffeesatz}"
                                        FontSize="16"
                                        Foreground="Gray" Margin="0,10,0,0" />
 
@@ -126,7 +125,7 @@
                                                      Foreground="Black"
                                                      GotFocus="usernameTextBoxGotFocus"
                                                      LostFocus="usernameTextBoxLostFocus"/>
-                                            <Image Source="assets/user_icon.png"
+                                            <Image Source="resources/images/user_icon.png"
                                                    HorizontalAlignment="Left"
                                                    Width="20" Height="20"
                                                    Margin="5,0,0,0"
@@ -143,7 +142,7 @@
                                 </Grid>
 
                                 <Label Grid.Row="3" Content="Password"
-                                       FontFamily="/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz"
+                                       FontFamily="{StaticResource YanoneKaffeesatz}"
                                        FontSize="16"
                                        Foreground="Gray" Margin="0,10,0,0" />
 
@@ -173,13 +172,13 @@
                                                          Foreground="Black"
                                                          GotFocus="passwordBoxGotFocus"
                                                          LostFocus="passwordBoxLostFocus"/>
-                                            <Image Source="assets/key_icon.png"
+                                            <Image Source="resources/images/key_icon.png"
                                                    HorizontalAlignment="Left"
                                                    Width="20" Height="20"
                                                    Margin="5,0,0,0"
                                                    IsHitTestVisible="False"/>
                                             <Image x:Name="eyeIcon" 
-                                                   Source="assets/eye_closed.png"
+                                                   Source="resources/images/eye_closed.png"
                                                    HorizontalAlignment="Right"
                                                    Width="20" Height="20"
                                                    Margin="0,0,8,0"
@@ -201,10 +200,10 @@
                     </Grid>
 
                     <Grid Grid.Column="1">
-                        <Image Source="assets/login-banner.png" Margin="20,30,10,5"/>
+                        <Image Source="resources/images/login-banner.png" Margin="20,30,10,5"/>
                     </Grid>
 
-                    <Image Source="assets/x_icon.png"
+                    <Image Source="resources/images/x_icon.png"
                            Grid.Column="1"
                            Margin="0,10,10,0"
                            Width="30" Height="30"
