--- a/Martify/LoginWindow.xaml
+++ b/Martify/LoginWindow.xaml
@@ -147,15 +147,14 @@
                                     </Label.RenderTransform>
                                 </Label>
 
+                                <!--Username Section-->
                                 <Label Grid.Row="1"
                                        Content="Username or email address"
                                        FontFamily="{StaticResource YanoneKaffeesatz}"
                                        FontSize="16"
                                        Foreground="Gray"
                                        Margin="0,10,0,0" />
-
-                                <Grid Grid.Row="2"
-                                      Margin="0,2,0,0">
+                                <Grid Grid.Row="2" Margin="0,2,0,0">
                                     <Border x:Name="usernameBorder"
                                             Focusable="False"
                                             BorderThickness="1"
@@ -171,9 +170,8 @@
                                                      FontSize="12"
                                                      BorderThickness="0"
                                                      Background="Transparent"
-                                                     Foreground="Black"
-                                                     GotFocus="usernameTextBoxGotFocus"
-                                                     LostFocus="usernameTextBoxLostFocus" />
+                                                     Foreground="Black" />
+
                                             <Image Source="resources/images/user_icon.png"
                                                    HorizontalAlignment="Left"
                                                    Width="20"
@@ -185,21 +183,21 @@
                                     <Border x:Name="usernameFocusBorder"
                                             BorderThickness="3"
                                             CornerRadius="5"
-                                            Visibility="Collapsed"
                                             IsHitTestVisible="False"
-                                            Focusable="false"
-                                            BorderBrush="#4b91cf" />
+                                            Focusable="False"
+                                            BorderBrush="#4b91cf"
+                                            Style="{StaticResource UsernameFocusBorderStyle}">
+                                    </Border>
                                 </Grid>
 
+                                <!--Password Section-->
                                 <Label Grid.Row="3"
                                        Content="Password"
                                        FontFamily="{StaticResource YanoneKaffeesatz}"
                                        FontSize="16"
                                        Foreground="Gray"
                                        Margin="0,10,0,0" />
-
-                                <Grid Grid.Row="4"
-                                      Margin="0,2,0,0">
+                                <Grid Grid.Row="4" Margin="0,2,0,0">
                                     <Border x:Name="passwordBorder"
                                             Focusable="False"
                                             BorderThickness="1"
@@ -216,9 +214,8 @@
                                                      BorderThickness="0"
                                                      Background="Transparent"
                                                      Foreground="Black"
-                                                     Visibility="Collapsed"
-                                                     GotFocus="passwordBoxGotFocus"
-                                                     LostFocus="passwordBoxLostFocus" />
+                                                     Visibility="Collapsed" />
+
                                             <PasswordBox x:Name="passwordBox"
                                                          VerticalContentAlignment="Center"
                                                          Padding="30,0,35,0"
@@ -227,15 +224,15 @@
                                                          FontSize="8"
                                                          BorderThickness="0"
                                                          Background="Transparent"
-                                                         Foreground="Black"
-                                                         GotFocus="passwordBoxGotFocus"
-                                                         LostFocus="passwordBoxLostFocus" />
+                                                         Foreground="Black" />
+
                                             <Image Source="resources/images/key_icon.png"
                                                    HorizontalAlignment="Left"
                                                    Width="20"
                                                    Height="20"
                                                    Margin="5,0,0,0"
                                                    IsHitTestVisible="False" />
+
                                             <Image x:Name="eyeIcon"
                                                    Source="resources/images/eye_closed.png"
                                                    HorizontalAlignment="Right"
@@ -244,17 +241,18 @@
                                                    Margin="0,0,8,0"
                                                    Cursor="Hand"
                                                    Focusable="False"
-                                                   MouseLeftButtonDown="EyeIcon_MouseLeftButtonDown" />
+                                                   MouseLeftButtonDown="showAndHidePasswordClick" />
                                         </Grid>
                                     </Border>
                                     <Border x:Name="passwordFocusBorder"
                                             BorderThickness="3"
-                                            CornerRadius="5"
-                                            Visibility="Collapsed"
-                                            IsHitTestVisible="False"
+                                            CornerRadius="8" IsHitTestVisible="False"
                                             Focusable="False"
-                                            BorderBrush="#4b91cf" />
+                                            BorderBrush="#4b91cf"
+                                            Style="{StaticResource PasswordFocusBorderStyle}">                                            
+                                    </Border>
                                 </Grid>
+                                
                             </Grid>
                         </Grid>
                     </Grid>
@@ -276,13 +274,10 @@
                                    MouseLeftButtonDown="CloseProgram_Click">
                                 <Image.Style>
                                     <Style TargetType="Image">
-                                        <Setter Property="Width"
-                                                Value="25" />
+                                        <Setter Property="Width" Value="25" />
                                         <Style.Triggers>
-                                            <Trigger Property="IsMouseOver"
-                                                     Value="True">
-                                                <Setter Property="Width"
-                                                        Value="30" />
+                                            <Trigger Property="IsMouseOver" Value="True">
+                                                <Setter Property="Width" Value="30" />
                                             </Trigger>
                                         </Style.Triggers>
                                     </Style>
