--- a/Martify/App.xaml
+++ b/Martify/App.xaml
@@ -2,12 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:Martify"
-             StartupUri="LoginWindow.xaml">
+             StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/resources/xaml_resources/TriggerRes.xaml"></ResourceDictionary>
                 <ResourceDictionary Source="/resources/xaml_resources/FontRes.xaml"></ResourceDictionary>
+                <ResourceDictionary Source="/resources/xaml_resources/MainResource.xaml"></ResourceDictionary>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
