--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -3,9 +3,11 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Martify" xmlns:uc="clr-namespace:Martify.UserCtrl"
+        xmlns:local="clr-namespace:Martify" 
+        xmlns:uc="clr-namespace:Martify.UserCtrl"
         mc:Ignorable="d"
-        Title="MainWindow" Height="720" Width="1080"
+        Title="Marity" 
+        Height="720" Width="1080"
         ResizeMode="CanMinimize"
         WindowStartupLocation="CenterScreen"
         WindowStyle="None"
@@ -41,6 +43,6 @@
 
         
         <uc:GradientBorderUC></uc:GradientBorderUC>
-        <uc:WindowCommandUC></uc:WindowCommandUC>
+        <uc:WindowControlUC></uc:WindowControlUC>
     </Grid>
 </Window>
