--- a/Martify/Resources/xaml_resources/FontRes.xaml
+++ b/Martify/Resources/xaml_resources/FontRes.xaml
@@ -2,5 +2,5 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <FontFamily x:Key="YanoneKaffeesatz">/Martify;component/Resources/fonts/YanoneKaffeesatz-Regular.ttf#Yanone Kaffeesatz</FontFamily>
     <FontFamily x:Key="PasseroOne">/Martify;component/Resources/fonts/PasseroOne-Regular.ttf#Passero One</FontFamily>
-    <FontFamily x:Key="RubikGlitchPop">/Martify;component/Resources/fonts/RubikGlitchPop-Regular.ttf#Rubik Glitch Pop</FontFamily>
+    <FontFamily x:Key="BungeeSpice">/Martify;component/Resources/fonts/BungeeSpice-Regular.ttf#Bungee Spice</FontFamily>
 </ResourceDictionary>
